@@ -163,6 +163,7 @@ enum {
     GPMSG_BEINGS_DAMAGE            = 0x0310, // { W being id, W amount }*
     GPMSG_CREATE_EFFECT_POS        = 0x0320, // W effect id, W*2 position
     GPMSG_CREATE_EFFECT_BEING      = 0x0321, // W effect id, W BeingID
+    GPMSG_SHAKE                    = 0x0330, // W intensityX, W intensityY, [W decay_times_10000, [W duration]]
 
     // Guild
     PCMSG_GUILD_CREATE                  = 0x0350, // S name
