@@ -1,3 +1,9 @@
+ENet 1.3.1 (February 10, 2011):
+
+* fixed bug in tracking of reliable data in transit
+* reliable data window size now scales with the throttle
+* fixed bug in fragment length calculation when checksums are used
+
 ENet 1.3.0 (June 5, 2010):
 
 * enet_host_create() now requires the channel limit to be specified as
